# Ai-Engineering-Note-and-code-demos

./: README.md
My Ai Engineering notes/: fine-tuning session part1.md  fine-tunning session 2.md  intro_to_fine_tuning_session.md  set_up_session.md
assignment_multimodel_application/: .env.example  README.md  README_STREAMLIT_APP.md  app.py  main.py  pyproject.toml  requirements.txt
assignment_multimodel_application/notebook/: multimodel.ipynb
