[project]
name = "assignment-multimodel-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffusers>=0.38.0",
    "gtts>=2.2.4",
    "huggingface-hub>=1.18.0",
    "torch>=2.12.0",
    "transformers>=5.11.0",
]
